# theodoratranscode

./: ChangeLog  ChangeLog~  INSTALL  INSTALL~  Makefile.am  Makefile.am~  Makefile.in  README.md  README.md~  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  command.c  command.vala  file.c  file.vala  theodoratranscode.c  theodoratranscode.desktop  theodoratranscode.ui  theodoratranscode.vala  theodoratranscode_debian.ui  widgets-adjutment.c  widgets-adjutment.vala  widgets-behaviour.c  widgets-behaviour.vala  widgets-feedback.c  widgets-feedback.vala  widgets-profile.c  widgets-profile.vala  widgets-query.c  widgets-query.vala
